--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
             <button class="btnlLogin-popup">Login</button>
         </nav>
     </header>
+
+    <div class="wrapper">
+        <div class="form-box login">
+            <h2>Login</h2>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
